use a set instead so duplicates are removed